# termux-pack

./: Cargo.toml  README.md
src/: main.rs  manifest.rs  tar.rs  utils.rs
