[package]
name = "termux-pack"
version = "0.1.0"
authors = ["guilhermerochas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde_json = "1.0.59"
tempfile = "3"
serde = { version = "1.0.117", features = ["derive"] }